kubernetes/argocd/apps/workloads/home/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: home
spec:
  selector:
    app: home
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
